# ai-governance-handbook

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  sbom.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: governance.yml  test.yml
aigov/: __main__.py
core/: __init__.py  audit.py  drift.py  fairness.py
data/: biased_hiring.csv  drifted_credit.csv  poisoned_supply.csv
notebooks/: ch01.ipynb  ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05a.ipynb  ch05b.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb  ch09.ipynb  ch10.ipynb  ch11.ipynb  ch12.ipynb  ch12b.ipynb  ch13.ipynb  ch14.ipynb  ch15.ipynb  ch16.ipynb  ch17.ipynb  ch18.ipynb  ch19.ipynb  ch20.ipynb
scripts/: extract_notebooks.py
