[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aigov"
version = "0.1.0"
description = "The executable standard for AI Governance — AI 기본법 · EU AI Act · NIST AI RMF"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "곽두일", email = "babel.ai.dub@gmail.com"}]
keywords = ["ai-governance", "fairness", "mlops", "compliance", "ai-act", "ai-기본법"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fairlearn>=0.10.0",
    "shap>=0.44.0",
    "mlflow>=2.11.0",
    "diffprivlib>=0.6.4",
    "evidently>=0.4.30",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0", "black", "ruff"]
deep = ["torch>=2.2.0", "flwr>=1.8.0", "opacus>=1.4.0", "captum>=0.7.0"]
all = ["aigov[dev,deep]", "sdv>=1.14.0", "alibi>=0.9.4", "alibi-detect>=0.12.0"]

[project.scripts]
aigov = "aigov.cli:main"

[project.urls]
Homepage = "https://github.com/back2zion/ai-governance-handbook"
Repository = "https://github.com/back2zion/ai-governance-handbook"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
